fix section header spacing

--- a/src/app/components/sectionheader/sectionheader.module.css
+++ b/src/app/components/sectionheader/sectionheader.module.css
@@ -1,7 +1,6 @@
 .sectionHeader {
-  padding: 3rem 1rem;
+  padding: 2.5rem 1rem;
   position: relative;
-  margin-bottom: 2rem;
 }
 
 .sectionHeader.center {
